# hons-project

./: .gitignore  CMakeLists.txt  README.md
b/: run_main
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt  README.md  consts.cpp  consts.hpp  types.hpp
lib/deprecated/: CMakeLists.txt  README.md  presolve_reader.cpp  presolve_reader.hpp  primal_reader.cpp  primal_reader.hpp  primal_simplex.cpp  primal_simplex.hpp  revised_simplex.cpp  revised_simplex.hpp
lib/dual_simplex/: main.hpp
lib/logical_solver/: main.cpp  presolve.cpp  presolve.hpp
lib/primal_simplex/: CMakeLists.txt  main.cpp  main.hpp
lib/revised_primal_solver/: main.cpp  main.hpp  simplex.cpp  simplex.hpp
lib/solvers/: CMakeLists.txt  README.md
lib/utils/: CMakeLists.txt  README.md  dual_reader.cpp  dual_reader.hpp  dual_reformatter.cpp  dual_reformatter.hpp  logical_reformatter.cpp  logical_reformatter.hpp  reader.cpp  (+9 more)
problems/: README.md  presolve_test_problem.txt  presolve_test_problem2.txt  primal_problems.txt
src/: CMakeLists.txt  README.md  combined_solver.cpp  combined_solver.hpp  dual_run.cpp  dual_run.hpp  logical_solver_run.cpp  logical_solver_run.hpp  main.cpp  main.hpp  primal_run.cpp  primal_run.hpp
src/dual_simplex/: CMakeLists.txt
src/logical_solver/: CMakeLists.txt  main.hpp
src/primal_simplex/: CMakeLists.txt  main.hpp
src/utils/: CMakeLists.txt  reader.cpp  reader.hpp
test-presolve/: CMakeLists.txt  CompLinkFILE  Run  basic_test.cpp  highs  highs_presolve.cpp
test-presolve/highs.dSYM/Contents/: Info.plist
test-presolve/highs.dSYM/Contents/Resources/DWARF/: highs
(+19 files in other folders)
